index.html updated

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               
             </header>
 
-            <!--home-->
+            <!--homesection-->
             <section class="section" id="home">
                 <div class="container">
                     <div class="row">
