--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                         </p>
                                         <footer class="blockquote-footer">benjamin franklin
 
-                                        </footer>
+                                            </footer>
                                     </blockquote>
                                 </div>
                             </div>
@@ -150,48 +150,13 @@
                     <div class="container">
                         <!--CarouselControls-->
                         <div class="row ">
-                            <div class="col-7">
+                            <div class="col-lg-6 justtext">
                                 <span style="font-family:brandon-grot-w01-light,sans-serif;">
                                     <h2>Cake For Every Occassion</h2>
                                 </span></br></br>
                                 <p class="font_8 text-info">Every cake is hand-crafted with great attention to detail,
                                     using the finest quality ingredients available and frosted and filled with homemade
-                                    buttercream frosting.
-
-                                    <p class="font_8 text-info" style="font-size:17px;"><span
-                                            style="font-size:17px;"><span class="color_13"><span
-                                                    style="font-family:brandon-grot-w01-light,sans-serif;">Wedding
-                                                    Cakes</span></span></span></p>
-
-                                    <p class="font_8 text-info" style="font-size:17px;"><span
-                                            style="font-size:17px;"><span class="color_13"><span
-                                                    style="font-family:brandon-grot-w01-light,sans-serif;">Groom&#39;s
-                                                    Cake</span></span></span></p>
-
-                                    <p class="font_8 text-info" style="font-size:17px;"><span
-                                            style="font-size:17px;"><span class="color_13"><span
-                                                    style="font-family:brandon-grot-w01-light,sans-serif;">Bride&#39;s
-                                                    Cake</span></span></span></p>
-
-                                    <p class="font_8 text-info" style="font-size:17px;"><span
-                                            style="font-size:17px;"><span class="color_13"><span
-                                                    style="font-family:brandon-grot-w01-light,sans-serif;">Birthdays</span></span></span>
-                                    </p>
-
-                                    <p class="font_8 text-info" style="font-size:17px;"><span
-                                            style="font-size:17px;"><span class="color_13"><span
-                                                    style="font-family:brandon-grot-w01-light,sans-serif;">Holidays</span></span></span>
-                                    </p>
-
-                                    <p class="font_8 text-info" style="font-size:17px;"><span
-                                            style="font-size:17px;"><span class="color_13"><span
-                                                    style="font-family:brandon-grot-w01-light,sans-serif;">Special
-                                                    Events</span></span></span></p>
-
-                                    <p class="font_8 text-info" style="font-size:17px;"><span
-                                            style="font-size:17px;"><span class="color_13"><span
-                                                    style="font-family:brandon-grot-w01-light,sans-serif;">Anniversaries&nbsp;</span></span></span>
-                                    </p>
+                                    buttercream frosting. Wedding, Groom&#39;s, Bride&#39;s, Birthdays, Holidays, Special Events and Anniversaries cakes</p>
 
                                     <p class="font_8 text-info" style="font-size:17px;"><span
                                             style="font-size:17px;"><span class="color_13"><span
@@ -201,7 +166,7 @@
                                         Specializing in wedding and all occasion cakes.
                                     </p>
                             </div>
-                            <div class="col-4">
+                            <div class="col-5">
                                 <div id="homeCarousel1" class="carousel slide" height="250" width="250"
                                     data-ride="carousel">
                                     <ol class="carousel-indicators">
